metadata/force-app/main/default/objects/CustomName_RGasy__c/CustomName_RGasy__c.object-meta.xml
<CustomObject>
    <description>Description_BVoOR</description>
    <label>CustomLabel_swmbt</label>
    <nameField>
        <label>CustomLabel_swmbt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_swmbts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>