metadata/force-app/main/default/objects/CustomName_RGasy__c/fields/CustomField_NSQKw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_NSQKw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVRkex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>