metadata/force-app/main/default/objects/CustomName_RGasy__c/fields/CustomField_qWmWx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qWmWx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTHPtK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>