metadata/force-app/main/default/objects/CustomName_RGasy__c/fields/CustomField_xvUZX__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xvUZX__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVtaAh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>